--- a/next-boardgamesite-frontend/package.json
+++ b/next-boardgamesite-frontend/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.23.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
